--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -47,6 +47,10 @@ body {
     flex: 3;
     width: 75%;
     margin-left:20px;
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    align-items: flex-start; 
   }
 
   .h1-center {
@@ -67,7 +71,6 @@ body {
     border: 1px solid grey;
     border-radius: 5px;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
-    margin-bottom: 20px;
     font-size: 16px;
   }
 
@@ -84,4 +87,22 @@ body {
 
   button[type="submit"]:hover {
     background-color: #0056b3;
+  }
+
+  .sub-left, .sub-right {
+    width: 45%;
+    border: 1px solid #ccc;
+    padding: 10px;
+    background-color: #f9f9f9;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  
+  .sub-left h4, .sub-right h4 {
+    margin: 0;
+    color: #333;
+  }
+  
+  .sub-info {
+    font-size: 14px;
+    margin-top: 10px;
   }
